= MagLev Change Log

  For more details see: http://bit.ly/d3C6S1

== Unreleased Changes
* Added $MaglevInBootstrap flag that is true during primitive install
  (bootstrap) and nil otherwise.  Used for debugging src/kernel code.

== Changes for 25987 2011-06-14
* Update rakefiles to 0.9.2: use of Rake::DSL and fix rdoc task.
* Fixes to C extension implementation so sqlite3 C code will run.
* adjusts topaz printing for STACK and THREAD commands.
* Fix Trac 538, and test case Trac484b .
* Fix Trac 914, 915, 916, 917, 918.
* Bugfixes in underlying GemStone 3.0 system

== Changes for 25955 2011-06-09
* Updated to RubyGems 1.8.5
* Update pre-installed gems: rake => 0.9.2, bundler => 1.0.14
* Fix Trac 913
* More fixes to line numbering in backtraces, and how
    bootstrap code is shown in backtraces.
* Relaxed the 75% of total ram limit for SHMMAX to enable
  customers with 144 GB of ram to use more of their physical memory.

== Changes for 25943 2011-06-07
* Fix Trac 904, 905, 906, 907, 908, 911
* Update underlying GemStone 3.0 system to GS/S 3.0.1

== Changes for 25913 2011-05-27
* Fix Trac 900, 901, 902, 903
* Bugfixes in underlying GemStone 3.0 system
  - fix 41127, 41385, 41452, 41532, 41535, 41544, 41547, 41548, 41549, 41550,
    41551, 41552, 41553, 41555, 41558, 41560, 41561, 41563, 41568, 41582, 41585

== Changes for 25876 2011-05-17
* Add local copy of jquery so WebTools demo can be done w/o network access.
* Build on first release candidate for underlying GS/S 3.0
* Bugfixes and enhancements to underlying GemStone 3.0 system
  - fix 39267, 39941, 41266, 41385, 41419, 41420, 41483, 41524, 41525, 41526,
    41527, 41528, 41530, 41522, 41528, 41529, 41534, 41536, 41538

== Changes for 25838 2011-05-10
* Fix broken --stone option in maglev-ruby
* Bugfixes and enhancements to underlying GemStone 3.0 system
  - fix 40875, 40895, 40901, 40903, 41014, 41395, 41451, 41456, 41469, 41478, 41484,