@@ -42,6 +42,7 @@ classes_simple.rb
 RubyContextTest.rb
 DefineMethod.rb
 DefineMethod_a.rb
+DefineMethod_b.rb
 NamespaceTest.rb
 CaseTest.rb
 #  RP not biasing line numbers yet because using byte offsets...
@@ -354,6 +355,7 @@ Trac808.rb
 Trac811.rb
 Trac811a.rb
 Trac814.rb
+Trac817.rb
 Trac818.rb
 Trac822.rb
 Trac823.rb
@@ -391,6 +393,7 @@ Trac913.rb
 Trac915.rb
 Trac916.rb
 Trac917.rb
+Trac919.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
